--- a/desc.css
+++ b/desc.css
@@ -1,5 +1,6 @@
 *{
-    color:white;
+    color:rgb(241, 244, 246);
+    font-weight: 500;
 }
 #headshot{
     width:100%;
@@ -8,7 +9,13 @@
     min-height:100%;
 }
 body{
-    background-color: aqua;
+    background-color: #4b39a07c;
+}
+a i{
+    color:rgb(234, 238, 241);
+}
+a i:hover{
+    color: rgb(255, 255, 255);
 }
 .align-center{
     text-align: center;
