--- a/background/back.css
+++ b/background/back.css
@@ -16,6 +16,7 @@ body{
     width: 100%;
     height:100vh;
     position: absolute;
+    top:0px;
    
 }
 
@@ -127,7 +128,7 @@ body{
     }
 
     100%{
-        transform: translateY(-1000px) rotate(720deg);
+        transform: translateY(-1000px) rotate(920deg);
         opacity: 0;
         border-radius: 50%;
     }
