--- a/desc.css
+++ b/desc.css
@@ -3,16 +3,40 @@
     font-weight: 500;
 }
 #headshot{
-    width:100%;
-    height:100%;
-    min-width:100%;
-    min-height:100%;
+    width:90%;
+    margin-top: 10%;
+    
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #00000036;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(161, 0, 0, 0.507);
+    border-radius: 2%;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(221, 0, 0, 0.685); 
+  }
 body{
-    background-color: #4b39a07c;
+    background-color: #00000036;
+}
+#center{
+    margin-top:8%
 }
 a i{
     color:rgb(234, 238, 241);
+}
+iframe{
+    border: 0px;
 }
 a i:hover{
     color: rgb(255, 255, 255);
@@ -42,4 +66,15 @@ a{
 a:hover{
     color:rgb(105, 73, 248);
     text-decoration: none;
+}
+@media (min-width:768px){
+    .hide{
+        display: none;
+    }
+    
+}
+@media (max-width:768px){
+    .centerr{
+            text-align: center;
+        }
 }
