--- a/index.css
+++ b/index.css
@@ -2,9 +2,9 @@ body{
     background-color: #212331;
 }
 iframe{
-    width:100%;
-    height:50vh;
-    margin-top: 20%;
+    width:90%;
+    height:40vh;
+    border: none;
 }
 .col{
     /* height:100vh; */
@@ -14,3 +14,125 @@ iframe{
 .cent{
     margin-top: 20%;
 }
+@media screen and (max-width:1200px){
+    .container{
+        margin:0px;
+        max-width: 99999px;
+    }
+}
+@media screen and (max-width:1022px){
+    .container{
+        margin:0px;
+        max-width: 99999px;
+    }
+    .padd-0{
+        padding:0%;
+    }
+    iframe{
+        width:97%;
+        
+    }
+}
+ 
+@media screen and (max-height:935px){
+    iframe{
+        width:90%;
+        height:45vh;
+        
+    }
+    .cent{
+        margin-top: 15%;
+    }
+}
+ @media screen and (max-height:834px){
+     iframe{
+        width:90%;
+        height:50vh;
+        
+    }
+    .cent{
+        margin-top: 13%;
+    }
+} 
+@media screen and (max-height:745px){
+    iframe{
+       width:90%;
+       /* height:90vh; */
+       
+   }
+   .cent{
+       margin-top: 10%;
+   }
+} 
+@media screen and (max-height:717px){
+    iframe{
+        
+        height:65vh;
+        
+    }
+}
+@media screen and (max-height:623px){
+    iframe{
+       width:90%;
+       height:65vh;
+       
+   }
+   .cent{
+       margin-top: 7%;
+       height: 90vh;
+   }
+   .container{
+       height:90vh;
+   }
+} 
+@media screen and (max-height:573px){
+    iframe{
+       width:90%;
+       height:70vh;
+       
+   }
+   .cent{
+       margin-top: 6%;
+   }
+} 
+@media screen and (max-height:529px){
+    iframe{
+       width:90%;
+       height:80vh;
+       
+   }
+   .cent{
+       margin-top: 4%;
+   }
+} 
+@media screen and (max-height:465px){
+    iframe{
+       width:90%;
+       height:90vh;
+       
+   }
+   .cent{
+       margin-top: 3%;
+   }
+} 
+@media screen and (max-height:465px){
+    iframe{
+       width:90%;
+       height:100vh;
+       
+   }
+   .cent{
+       margin-top: 0%;
+   }
+} 
+@media screen and (max-width:851px){
+    
+    .container{
+        margin:0px;
+        max-width: 99999px;
+    }
+    iframe{
+        height:90vh;
+        
+    }
+} 
