--- a/desc.css
+++ b/desc.css
@@ -61,12 +61,13 @@ a i:hover{
     width:20px
 }
 a{
-    color:rgb(255, 0, 0);
+    color:rgba(255, 0, 0, 0.828);
     font-weight: 600;
 }
 a:hover{
-    color:rgb(105, 73, 248);
+    color:rgb(255, 0, 0);
     text-decoration: none;
+    font-weight: 800;
 }
 @media (min-width:768px){
     .hide{
