--- a/desc.css
+++ b/desc.css
@@ -20,18 +20,18 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #00000036;
+    background: #00000041;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgba(161, 0, 0, 0.507);
+    background: #013d7d62;
     border-radius: 2%;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgba(221, 0, 0, 0.685);
+    background: #013d7daf;
 }
 
 body {
@@ -83,14 +83,14 @@ a i:hover {
 }
 
 a {
-    color: rgba(255, 0, 0, 0.828);
-    font-weight: 600;
+    color: #094f99;
+    font-weight: 800;
 }
 
 a:hover {
-    color: rgb(255, 0, 0);
+    color: #013d7d;
     text-decoration: none;
-    font-weight: 800;
+    font-weight: 900;
 }
 
 @media (min-width:768px) {
