--- a/loading.css
+++ b/loading.css
@@ -29,11 +29,22 @@ body{
   .wave {
     width: 10px;
     height: 70px;
-    background: rgba(255, 0, 0, 0.582);
+    background: #013d7de0;
     margin: 15px;
     animation: wave 1.5s ease-in-out infinite;
     border-radius: 20px;
   }
+  @media screen and (max-width:851px){
+    .wave {
+      width: 6px;
+      height: 50px;
+      background: #013d7de0;
+      margin: 7px;
+      animation: wave 1.5s ease-in-out infinite;
+      border-radius: 15px;
+    }
+    
+} 
   .wave:nth-child(2) {
     animation-delay: 0.1s;
   }
