--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
 }
 iframe{
     width:90%;
-    height:44vh;
+    height:50vh;
     border: none;
     transition-duration: 0.3s;
     backdrop-filter: blur(10px);
@@ -34,7 +34,7 @@ iframe{
 @media screen and (max-width:2000px){
     iframe{
         width:90%;
-        max-height: 500px;
+        max-height: 90vh;
         overflow: hidden;
     }
 }
@@ -117,7 +117,7 @@ iframe{
     iframe{
         margin-top: 2vh;
        width:90%;
-       height:70vh;
+       height:75vh;
        
    }
    .cent{
@@ -161,7 +161,7 @@ iframe{
         max-width: 99999px;
     }
     iframe{
-        height:81vh;
+        height:85vh;
         
     }
 } 
@@ -172,7 +172,7 @@ iframe{
         max-width: 99999px;
     }
     iframe{
-        height:70vh;
+        height:90vh;
         max-height: initial;
         
     }
