--- a/background/back.css
+++ b/background/back.css
@@ -43,7 +43,7 @@ body{
 .circles li:hover{
     
     
-    background: rgba(255, 255, 255);
+    background: rgb(20, 20, 221);
     opacity:1;
 }
 .circles li:nth-child(1){
@@ -141,7 +141,7 @@ body{
         transform: translateY(-1000px) rotate(500deg);
         opacity:0.1;
         border-radius: 45%;
-        background: #ffc0c0;
+        background: #a398ff;
     }
     
 
