--- a/index.css
+++ b/index.css
@@ -22,6 +22,14 @@ iframe{
     margin-top: 20%;
     
 }
+#preloader {
+      display: none;
+      width: 0;
+      height: 0;
+      border: 0;
+}
+
+
  @media screen and (min-height:935px){
     iframe{
         width:90%;
