--- a/loading.css
+++ b/loading.css
@@ -1,6 +1,6 @@
 
 body{
-    background-color: #212331;
+    background-color: #202124 !important;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
